@@ -1,3 +1,7 @@
+2009-03-19  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added missing files.
+
 2009-03-18  Mișu Moldovan  <dumol@gnome.ro>
 
 	* ro.po: updated Romanian translation by Cristian Secară
